# mulchy

./: .env.example  .gitignore  README.md  ROADMAP.md  analyzer.py  camera.py  config.py  install.sh  main.py  pyproject.toml  synthesizer.py  web.py
.github/workflows/: ci.yml
scripts/: deploy.sh  install.sh  sudoers-mulchy-shutdown  wifi_monitor.sh
src/mulchy/: analyzer.py  camera.py  config.py  main.py  player.py  sources.py  synthesizer.py  web.py
tests/: conftest.py
tests/browser/: test_dashboard.py
tests/integration/: test_web.py
tests/unit/: test_analyzer.py  test_config.py  test_pipeline.py  test_synthesizer.py
