[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mulchy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "flask>=3.0",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# picamera2 is installed manually on the Pi (see scripts/install.sh) — it needs
# system apt packages (libcap-dev) and doesn't resolve cleanly in a standard venv.
webcam = ["opencv-python-headless"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
mulchy = "mulchy.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mulchy"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — web.py has embedded HTML/JS strings
]
