[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mulchy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "flask>=3.0",
    "pillow>=10.0",
    "python-dotenv>=1.0",
    # Pure-Python ctypes wrapper around libportaudio2 (apt-installed on the
    # Pi). Importing it fails gracefully at runtime if portaudio is missing,
    # so it's safe to install even on dev machines without audio libs.
    "sounddevice",
]

[project.optional-dependencies]
# picamera2 isn't listed here — it's installed via apt as python3-picamera2
# and inherited into the uv venv through --system-site-packages, because its
# python3-libcamera native dependency only ships as an apt package.
webcam = ["opencv-python-headless"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "playwright",
    "pytest-playwright",
]

[project.scripts]
mulchy = "mulchy.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mulchy"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — web.py has embedded HTML/JS strings
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = [
    "--tb=short",
    # Suppress ROS/ament pytest plugins that are registered system-wide and
    # leak into this venv via --system-site-packages — they're not part of
    # this project's deps and error out when auto-loaded.
    "-p", "no:launch_testing",
    "-p", "no:launch_ros",
    "-p", "no:ament_flake8",
    "-p", "no:ament_pep257",
    "-p", "no:ament_copyright",
    "-p", "no:ament_xmllint",
    "-p", "no:ament_lint",
    "-p", "no:colcon_core_warnings_stderr",
]

[tool.coverage.run]
source = ["src/mulchy"]
omit   = ["*/tests/*"]
